# fi-knowledge-explorer

./: .gitignore  PIPELINE.md  README.md  README_LOGGING_AND_ERRORS.md  README_V2_ACTIVATION.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  cypher_generator.py  cypher_validator.py  db.py  entity_resolution.py  evidence_summarizer.py  graph_schema.py  intent_detector.py  intent_models.py  llm.py  logging_config.py  main.py  ollama_client.py  ollama_request_options.py  query_execution.py  query_templates.py  routes.py  schema_context.py  schemas.py  service.py  streaming_answer.py
backend/tests/: test_answer_accuracy_fix.py  test_intent_helpers.py  test_intent_layer.py  test_ollama_request_options.py  test_operating_model_v2.py  test_progressive_answer.py  test_semantic_layout_impact_fix.py  test_stability_fixes.py
data/: ACTIVE_DATASET.md
data/alternate_model_not_loaded/csv/: controls.csv  departments.csv  employees.csv  organizations.csv  process_steps.csv  processes.csv  rel_control_risks.csv  rel_department_processes.csv  rel_employee_responsibilities.csv  rel_organization_departments.csv  (+10 more)
data/bank_operating_model_v2/: README.md
data/neo4j_starter/: README_START_HERE.md  docker-compose.yml
docs/: BANK_OPERATING_MODEL_V2.md  CSV_DATA_MAINTENANCE.md  SCHEMA_AND_KPIS.md
frontend/: Dockerfile  nuxt.config.ts  package.json
scripts/: activate-bank-operating-model-v2.sh  capture-logs.sh  diagnose.sh  import-and-verify.sh  reimport-bank-operating-model-v2.sh  test-ollama-generate-payload.sh  verify-answer-accuracy.sh  verify-stack.sh
(+84 files in other folders)
