[project]
name = "super-bank-backend"
version = "0.1.0"
description = "SUPER_BANK responsibility and process knowledge graph API"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.116.0",
  "httpx>=0.28.0",
  "neo4j>=6.0.0",
  "pydantic-settings>=2.10.0",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = ["pytest>=8.4.0"]
